@@ -3,7 +3,13 @@ import netrc, os, unittest, sys
 from test import test_support
 
 TEST_NETRC = """
+
+ #this is a comment
+#this is a comment
+# this is a comment
+
 machine foo login log1 password pass1 account acct1
+machine bar login log1 password pass# account acct1
 
 macdef macro1
 line1
@@ -28,18 +34,21 @@ class NetrcTestCase(unittest.TestCase):
         fp = open(temp_filename, mode)
         fp.write(TEST_NETRC)
         fp.close()
-        self.netrc = netrc.netrc(temp_filename)
+        self.nrc = netrc.netrc(temp_filename)
 
     def tearDown (self):
-        del self.netrc
         os.unlink(temp_filename)
 
     def test_case_1(self):
-        self.assertTrue(self.netrc.macros == {'macro1':['line1\n', 'line2\n'],
-                                           'macro2':['line3\n', 'line4\n']}
-                                           )
-        self.assertTrue(self.netrc.hosts['foo'] == ('log1', 'acct1', 'pass1'))
-        self.assertTrue(self.netrc.hosts['default'] == ('log2', None, 'pass2'))
+        self.assertEqual(self.nrc.hosts['foo'], ('log1', 'acct1', 'pass1'))
+        self.assertEqual(self.nrc.hosts['default'], ('log2', None, 'pass2'))
+
+    def test_macros(self):
+        self.assertEqual(self.nrc.macros, {'macro1':['line1\n', 'line2\n'],
+                                           'macro2':['line3\n', 'line4\n']})
+
+    def test_parses_passwords_with_hash_character(self):
+        self.assertEqual(self.nrc.hosts['bar'], ('log1', 'acct1', 'pass#'))
 
 def test_main():
     test_support.run_unittest(NetrcTestCase)
